--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1,30 +1,407 @@
-@import "genwebupc";
+$fontAwesomePath: "/++genweb++static/fonts";
+@import "compass_twitter_bootstrap/font-awesome";
+// @import "genwebupc";
 
-.pb-ajax {
-  @extend .modal;
+// Victor for pushing it to genweb.theme
+
+// .pb-ajax {
+//   @extend .modal;
+// }
+
+// .pb-ajax .documentFirstHeading {
+//   @extend .modal-header;
+// }
+
+// .pb-ajax #content-core {
+//   @extend .modal-body;
+// }
+
+// Marc's CSS
+
+body {
+  background:#eae9e4;
+  font-family: 'Open Sans', sans-serif;
 }
 
-.pb-ajax .documentFirstHeading {
-  @extend .modal-header;
+#portal-header {
+  border-top: none;
+  border-bottom: none;
+  background:#eae9e4;
 }
 
-.pb-ajax #content-core {
-  @extend .modal-body;
+#portal-header .container {
+  border-bottom: none;
 }
 
-.btn-custom {
-  background-color: hsl(0, 69%, 22%) !important;
+input, button, select, textarea {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.ulearnbox h2 {
+    color: #f58d3d;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 26px;
+    margin: 0;
+    padding: 0;
+}
+a {
+  color: #007BC0;
+  text-decoration: underline;
+  -webkit-transition: 0.25s;
+  -moz-transition: 0.25s;
+  -o-transition: 0.25s;
+  transition: 0.25s;
+  -webkit-backface-visibility: hidden;
+  }
+a:hover {
+    color: #004A74;
+    text-decoration: none; }
+a:hover, a:focus {
+    color: #004A74;
+    text-decoration: underline;
+}
+a:hover, a:active {
+    outline: 0 none;
+}
+
+.masthead {
+  background-color: #f58d3d;
+  margin-bottom: 1.2em;
+  padding: 15px 20px;
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+}
+
+// Victor
+// .pull-right {
+//     float: right;
+//     margin-top: 2em;
+// }
+
+.dropdown-menu a {
+  text-decoration:none;
+  }
+.span3 {
+
+}
+.span6 {
+background:white;
+  }
+footer {
+    background-color: #f58d3d;
+  padding:20px;
+  font-size:13px;
+  color:white;
+  margin-top:20px;
+  box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+}
+input[type="text"] {
+    border-color: #E76E10;
+    margin-right: 5px;
+    padding: 4px 0 4px 10px;
+}
+input[type="text"]:focus {
+border-color: #34495E;
+}
+
+.ulearnbox {
+  background:url("/++ulearn++static/images/pix_cantonada.png") no-repeat right top white;
+  padding: 5px 10px 10px;
+  clear:both;
+  margin-bottom:20px;
+  box-shadow: -1px 1px 2px #ddd;
+  }
+.ulearnbox a {text-decoration:none;}
+#badges {
+  background:white;
+  }
+.box_badges {
+    background: none repeat scroll 0 0 #f58d3d;
+    color: white;
+    float: left;
+    font-size: 23px;
+    height: 28px;
+    margin-bottom: 6px;
+    margin-right: 2px;
+    padding-top: 4px;
+    text-align: center;
+    width: 100%;
+}
+.box_badges:hover {opacity:0.8;cursor:pointer;margin-left: 3px;transition: all 0.25s ease 0s;}
+.novetat {
+   background: none repeat scroll 0 0 #34495E;
+  }
+#user {
+    color: #666666;
+    font-size: 0.8em;
+    margin-bottom: 5px;
+}
+#user p {
+  margin-bottom:0;
+  }
+
+// Victor
+// .navbar-inner a {color:white;}
+
+.navbar {font-size:14px;}
+.nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
+    background-color: #DEDED6;
+}
+.nav-pills > li > a {
+    background: none repeat scroll 0 0 #DEDED6;
+  color:#34495E;
+  text-decoration:none;
+  text-shadow:1px 1px 0px white;
+  outline:none;
+}
+#box_comunitats .nav {
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+.num {
+    background: none repeat scroll 0 0 #f58d3d;
+    border-left: 1px solid #eee;
+    border-radius: 0 5px 5px 0;
+    color: white;
+    float: right;
+    font-weight: bold;
+    height: 18px;
+    margin-right: -11px;
+    margin-top: -8px;
+    padding: 7px 5px 5px;
+    text-align: center;
+    text-shadow: 1px 1px 0 #92480F;
+    width: 33px;
+}
+.num:hover {opacity:0.8;}
+.icons {margin-right:4px;}
+#miniatures {
+  margin-top:10px;
+  }
+#miniatures img {
+    height: 60px;
+    overflow: hidden;
+    padding-bottom: 7px;
+    padding-right: 4px;
+    width: 60px;
+  transition: all 0.10s ease 0s;
+}
+#miniatures img:hover {opacity:0.8;}
+#menusup {
+    background: none repeat scroll 0 0 #DEDED6;
+    border: 1px solid white;
+    padding-bottom: 1px;
+  border-bottom:0;
+}
+#menusup .nav-tabs {
+  border-bottom:0;
+  margin-bottom:0;
+  }
+#menusup .nav-tabs > li > a {
+  background:#DEDED6;
+  color:#444;
+  border-radius:0;
+  border:0;
+  padding-right:20px;
+  padding-left:8px;
+  text-shadow:1px 1px 0px white;
+  text-decoration:none;
+  margin:0;
+  }
+#menusup .nav-tabs > .active > a, #menusup .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
+background:#f58d3d;
+color:white;
+text-shadow:none;
+    }
+#menusup .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
+  background:#EEEEEE;
+   transition: all 0.25s ease 0s;
+  }
+#menusup .icons {font-size:20px;}
+
+#day {
+    background: none repeat scroll 0 0 #f58d3d;
+    border-radius: 4px 4px 4px 4px;
+    color: white;
+    font-size: 36px;
+    font-weight: bold;
+    padding-bottom: 18px;
+    padding-top: 24px;
+    text-align: center;
+    text-shadow: 1px 1px 0 #92480F;
+}
+#day p {margin:0;}
+.data {font-size:13px;}
+#agenda {
+  background:#f5f5f5;
+  font-size:12px;
+  margin-top:10px;
+  }
+#esdev {
+    line-height: 15px;
+    padding: 8px 4px 0 2px;
+}
+#calendari {
+    background: none repeat scroll 0 0 #F5F5F5;
+    margin-top: 10px;
+    padding: 5px 5px 10px;
+    text-shadow: 1px 1px 0 white;
+}
+#box_agenda .hiddenStructure {
+    background: none repeat scroll 0 0 #EAE9E4;
+    color: black;
+    margin-bottom: 5px;
+    padding: 1px;
+}
+.weekdays {font-size:11px;}
+.ploneCalendar {width:100%;font-size:13px;}
+.event { text-shadow:none;text-align:center;}
+.event:hover {background:#fff;}
+.todayevent{ background:#007BC0;text-shadow:none;text-align:center;border-radius:2px;}
+.event a {color:#555;font-weight:normal;}
+.todayevent a {color:#fff;}
+
+#box_valorats ul, #box_comentaris ul {margin-top:10px;}
+
+#box_valorats li, #box_comentaris li {
+    border-bottom: 1px solid #EEEEEE;
+    font-size: 13px;
+    line-height: 15px;
+    margin-bottom: 8px;
+    padding-bottom: 8px;
+}
+#box_valorats i, #box_comentaris i {
+ color:#34495E;
+ font-size:15px;
+ vertical-align: middle;
+}
+
+
+.btn-comunitat {
+  color: #FFFFFF;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  background-color: #34495E;
+  *background-color: #34495E;
+  background-image: -moz-linear-gradient(top, #3c546c, #34495E);
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#3c546c), to(#34495E));
+  background-image: -webkit-linear-gradient(top, #3c546c, #34495E);
+  background-image: -o-linear-gradient(top, #3c546c, #34495E);
+  background-image: linear-gradient(to bottom, #3c546c, #34495E);
   background-repeat: repeat-x;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#b42121", endColorstr="#5e1111");
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#b42121), to(#5e1111));
-  background-image: -moz-linear-gradient(top, #b42121, #5e1111);
-  background-image: -ms-linear-gradient(top, #b42121, #5e1111);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #b42121), color-stop(100%, #5e1111));
-  background-image: -webkit-linear-gradient(top, #b42121, #5e1111);
-  background-image: -o-linear-gradient(top, #b42121, #5e1111);
-  background-image: linear-gradient(#b42121, #5e1111);
-  border-color: #5e1111 #5e1111 hsl(0, 69%, 17%);
-  color: #fff !important;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
-  -webkit-font-smoothing: antialiased;
+  border-color: #34495E;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#3c546c', endColorstr='#34495E', GradientType=0);
+  filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    font-size: 13px;
+    line-height: 15px;
+    padding-bottom: 10px;
+  padding-top: 10px;
+  width:100%;
+}
+.btn-comunitat:hover,
+.btn-comunitat:active,
+.btn-comunitat.active,
+.btn-comunitat.disabled,
+.btn-comunitat[disabled] {
+  color: #FFFFFF;
+  background-color: #34495E;
+  *background-color: #003bb3;
+}
+
+/* ==========================================================================
+   MAX
+   ========================================================================== */
+
+#maxui-container {
+    color: #444444;
+    font: 13px/18px 'open sans',serif;
+    text-shadow: 0 1px #FFFFFF;
+   border: 0 none;
+}
+#maxui-container a {
+    color: #007BC0;
+    font-family: 'open sans", serif';
+}
+.maxui-displayname {
+    color: #F58D3D;
+    font-size: 14px;
+    font-weight: bold;
+}
+#maxui-timeline {
+    background: none repeat scroll 0 0 #FFFFFF;
+    clear: both;
+    margin: 0;
+    overflow: hidden;
+    padding: 10px;
+}
+#maxui-newactivity {
+    background: none repeat scroll 0 0 #34495E;
+    padding: 10px;
+    position: relative;
+}
+#maxui-newactivity textarea, .maxui-comments textarea {
+    border: 0 none;
+    border-radius: 3px 3px 3px 3px;
+    box-shadow: 0;
+    color: #444444;
+    font-family: 'opens sans',serif;
+    font-size: 13px;
+    height: 48px;
+    line-height: 18px;
+    min-height: 48px;
+    overflow: auto;
+    padding: 5px 3px 5px 8px;
+    position: relative;
+    resize: vertical;
+    width: 100%;
+}
+#maxui-search {
+    background: none repeat scroll 0 0 #DEDED6;
+    border-bottom: 0 none;
+    border-top: 0 none;
+    padding: 10px 30px 10px 10px;
+}
+#maxui-search-text {
+    -moz-appearance: none;
+    border: 1px solid #B2B2B2;
+    color: #666666;
+    font-family: 'open sans',serif;
+    font-size: 13px;
+    height: 24px;
+    line-height: 20px;
+    min-height: 24px;
+    padding: 1px 5px;
+    position: relative;
+    width: 100%;
+}
+.maxui-avatar:before, .maxui-avatar:before {
+    border-radius: 0 0 0 0;
+    bottom: 0;
+    content: "";
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.maxui-topright {
+    color: #222222;
+    font-size: 11px;
+    text-align: right;
+}
+.maxui-avatar {
+    float: left;
+    left: -60px;
+    max-width: 100%;
+    position: absolute;
+    top: 0;
+}
+.activities .maxui-activity-content {
+    margin: 0 0 0 60px;
+}
+#maxui-back-conversations, #maxui-show-conversations {
+    background: none repeat scroll 0 0 #F5F5F5;
+    border-bottom: 0 none;
+    height: 18px;
+    padding-bottom: 3px;
+    text-align: center;
 }
