--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -87,8 +87,18 @@ a:hover, a:active {
 .span6 {
 background:white;
   }
-footer {
-    background-color: #f58d3d;
+
+#peu {
+  background: none;
+  border-top: none;
+  a {
+    color: white;
+  }
+}
+
+#peu .container {
+  border-top: none;
+  background-color: #f58d3d;
   padding:20px;
   font-size:13px;
   color:white;
@@ -314,13 +324,13 @@ text-shadow:none;
 
 #maxui-container {
     color: #444444;
-    font: 13px/18px 'open sans',serif;
+    font: 13px/18px 'Open Sans', serif;
     text-shadow: 0 1px #FFFFFF;
    border: 0 none;
 }
 #maxui-container a {
     color: #007BC0;
-    font-family: 'open sans", serif';
+    font-family: 'Open Sans', serif;
 }
 .maxui-displayname {
     color: #F58D3D;
@@ -344,7 +354,7 @@ text-shadow:none;
     border-radius: 3px 3px 3px 3px;
     box-shadow: 0;
     color: #444444;
-    font-family: 'opens sans',serif;
+    font-family: 'Open Sans', serif;
     font-size: 13px;
     height: 48px;
     line-height: 18px;
@@ -365,7 +375,7 @@ text-shadow:none;
     -moz-appearance: none;
     border: 1px solid #B2B2B2;
     color: #666666;
-    font-family: 'open sans',serif;
+    font-family: 'Open Sans', serif;
     font-size: 13px;
     height: 24px;
     line-height: 20px;
