--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -393,6 +393,11 @@ text-shadow:none;
     right: 0;
     top: 0;
 }
+
+.maxui-avatar {
+  box-shadow: none;
+}
+
 .maxui-topright {
     color: #222222;
     font-size: 11px;
