--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -126,7 +126,7 @@ border-color: #34495E;
     height: 28px;
     margin-bottom: 6px;
     margin-right: 2px;
-    padding-top: 4px;
+    padding-top: 5px;
     text-align: center;
     width: 100%;
 }
@@ -146,7 +146,6 @@ border-color: #34495E;
 // Victor
 // .navbar-inner a {color:white;}
 
-.navbar {font-size:14px;}
 .nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
     background-color: #DEDED6;
 }
@@ -205,8 +204,8 @@ border-color: #34495E;
   color:#444;
   border-radius:0;
   border:0;
-  padding-right:20px;
-  padding-left:8px;
+  padding-right:15px;
+  padding-left:7px;
   text-shadow:1px 1px 0px white;
   text-decoration:none;
   margin:0;
@@ -235,7 +234,7 @@ text-shadow:none;
 	margin-bottom:0;
 }
 #day p {margin:0;}
-.data {font-size:13px;}
+.data {font-size:13px;padding-top:6px;}
 #agenda {
   background:#f5f5f5;
   font-size:12px;
@@ -314,6 +313,17 @@ text-shadow:none;
   background-color: #34495E;
   *background-color: #003bb3;
 }
+#menusup .nav-tabs > .btn-plus > a {
+    background: none repeat scroll 0 0 #34495E;
+    color: white;
+    padding-left: 10px;
+    padding-right: 5px;
+    text-shadow: none;
+}
+#menusup .nav-tabs > .btn-plus > a:hover {
+    background: none repeat scroll 0 0 #34495E;
+    opacity: 0.8;
+}
 
 /* ==========================================================================
    MAX
@@ -334,6 +344,10 @@ text-shadow:none;
     color: #F58D3D;
     font-size: 14px;
     font-weight: bold;
+}
+#maxui-container a:hover {
+    color: #34495E;
+    text-decoration: none;
 }
 #maxui-timeline {
     background: none repeat scroll 0 0 #FFFFFF;
@@ -473,9 +487,11 @@ h1, h2, h3, label {
     margin: 0 0 15px;
     padding: 0 0 5px;
 }
-.tab-content, .documentEditable {
+#documents-view, #links-view, #images-view, .documentEditable {
      padding: 10px;
 }
+
+.content_edit .rowlike {padding: 10px;}
 .nav-tabs, .contentViews, .configlets {
  box-shadow: none;
 }
@@ -502,3 +518,7 @@ h1, h2, h3, label {
 #eines .input-append {
     border-left: 0;
 	}	
+#edit-bar, .formTabs {
+font-size:12px;
+}	
+#edit-bar a, .formTabs a {text-decoration:none;}
