--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1738,7 +1738,7 @@ input[type="text"]:focus {
   height: 28px;
   margin-bottom: 6px;
   margin-right: 2px;
-  padding-top: 4px;
+  padding-top: 5px;
   text-align: center;
   width: 100%;
 }
@@ -1769,16 +1769,11 @@ input[type="text"]:focus {
 }
 
 /* line 149, ../scss/ulearn.scss */
-.navbar {
-  font-size: 14px;
-}
-
-/* line 150, ../scss/ulearn.scss */
 .nav-pills > .active > a, .nav-pills > .active > a:hover, .nav-pills > .active > a:focus {
   background-color: #DEDED6;
 }
 
-/* line 153, ../scss/ulearn.scss */
+/* line 152, ../scss/ulearn.scss */
 .nav-pills > li > a {
   background: none repeat scroll 0 0 #DEDED6;
   color: #34495E;
@@ -1787,13 +1782,13 @@ input[type="text"]:focus {
   outline: none;
 }
 
-/* line 160, ../scss/ulearn.scss */
+/* line 159, ../scss/ulearn.scss */
 #box_comunitats .nav {
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-/* line 164, ../scss/ulearn.scss */
+/* line 163, ../scss/ulearn.scss */
 .num {
   background: none repeat scroll 0 0 #f58d3d;
   border-left: 1px solid #eee;
@@ -1810,22 +1805,22 @@ input[type="text"]:focus {
   width: 33px;
 }
 
-/* line 179, ../scss/ulearn.scss */
+/* line 178, ../scss/ulearn.scss */
 .num:hover {
   opacity: 0.8;
 }
 
-/* line 180, ../scss/ulearn.scss */
+/* line 179, ../scss/ulearn.scss */
 .icons {
   margin-right: 4px;
 }
 
-/* line 181, ../scss/ulearn.scss */
+/* line 180, ../scss/ulearn.scss */
 #miniatures {
   margin-top: 10px;
 }
 
-/* line 184, ../scss/ulearn.scss */
+/* line 183, ../scss/ulearn.scss */
 #miniatures img {
   height: 60px;
   overflow: hidden;
@@ -1835,12 +1830,12 @@ input[type="text"]:focus {
   transition: all 0.10s ease 0s;
 }
 
-/* line 192, ../scss/ulearn.scss */
+/* line 191, ../scss/ulearn.scss */
 #miniatures img:hover {
   opacity: 0.8;
 }
 
-/* line 193, ../scss/ulearn.scss */
+/* line 192, ../scss/ulearn.scss */
 #menusup {
   background: none repeat scroll 0 0 #DEDED6;
   border: 1px solid white;
@@ -1848,44 +1843,44 @@ input[type="text"]:focus {
   border-bottom: 0;
 }
 
-/* line 199, ../scss/ulearn.scss */
+/* line 198, ../scss/ulearn.scss */
 #menusup .nav-tabs {
   border-bottom: 0;
   margin-bottom: 0;
 }
 
-/* line 203, ../scss/ulearn.scss */
+/* line 202, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a {
   background: #DEDED6;
   color: #444;
   border-radius: 0;
   border: 0;
-  padding-right: 20px;
-  padding-left: 8px;
+  padding-right: 15px;
+  padding-left: 7px;
   text-shadow: 1px 1px 0px white;
   text-decoration: none;
   margin: 0;
 }
 
-/* line 214, ../scss/ulearn.scss */
+/* line 213, ../scss/ulearn.scss */
 #menusup .nav-tabs > .active > a, #menusup .nav-tabs > .active > a:hover, .nav-tabs > .active > a:focus {
   background: #f58d3d;
   color: white;
   text-shadow: none;
 }
 
-/* line 219, ../scss/ulearn.scss */
+/* line 218, ../scss/ulearn.scss */
 #menusup .nav-tabs > li > a:hover, .nav-tabs > li > a:focus {
   background: #EEEEEE;
   transition: all 0.25s ease 0s;
 }
 
-/* line 223, ../scss/ulearn.scss */
+/* line 222, ../scss/ulearn.scss */
 #menusup .icons {
   font-size: 20px;
 }
 
-/* line 225, ../scss/ulearn.scss */
+/* line 224, ../scss/ulearn.scss */
 #day {
   background: none repeat scroll 0 0 #f58d3d;
   border-radius: 4px 4px 4px 4px;
@@ -1899,31 +1894,32 @@ input[type="text"]:focus {
   margin-bottom: 0;
 }
 
-/* line 237, ../scss/ulearn.scss */
+/* line 236, ../scss/ulearn.scss */
 #day p {
   margin: 0;
 }
 
-/* line 238, ../scss/ulearn.scss */
+/* line 237, ../scss/ulearn.scss */
 .data {
   font-size: 13px;
+  padding-top: 6px;
 }
 
-/* line 239, ../scss/ulearn.scss */
+/* line 238, ../scss/ulearn.scss */
 #agenda {
   background: #f5f5f5;
   font-size: 12px;
   margin-top: 10px;
 }
 
-/* line 244, ../scss/ulearn.scss */
+/* line 243, ../scss/ulearn.scss */
 #esdev {
   line-height: 15px;
   padding: 8px 4px 0 2px;
   margin-bottom: 0;
 }
 
-/* line 249, ../scss/ulearn.scss */
+/* line 248, ../scss/ulearn.scss */
 #calendari {
   background: none repeat scroll 0 0 #F5F5F5;
   margin-top: 10px;
@@ -1931,7 +1927,7 @@ input[type="text"]:focus {
   text-shadow: 1px 1px 0 white;
 }
 
-/* line 255, ../scss/ulearn.scss */
+/* line 254, ../scss/ulearn.scss */
 #box_agenda .hiddenStructure {
   background: none repeat scroll 0 0 #EAE9E4;
   color: black;
@@ -1939,29 +1935,29 @@ input[type="text"]:focus {
   padding: 1px;
 }
 
-/* line 261, ../scss/ulearn.scss */
+/* line 260, ../scss/ulearn.scss */
 .weekdays {
   font-size: 11px;
 }
 
-/* line 262, ../scss/ulearn.scss */
+/* line 261, ../scss/ulearn.scss */
 .ploneCalendar {
   width: 100%;
   font-size: 13px;
 }
 
-/* line 263, ../scss/ulearn.scss */
+/* line 262, ../scss/ulearn.scss */
 .event {
   text-shadow: none;
   text-align: center;
 }
 
-/* line 264, ../scss/ulearn.scss */
+/* line 263, ../scss/ulearn.scss */
 .event:hover {
   background: #fff;
 }
 
-/* line 265, ../scss/ulearn.scss */
+/* line 264, ../scss/ulearn.scss */
 .todayevent {
   background: #007BC0;
   text-shadow: none;
@@ -1969,29 +1965,29 @@ input[type="text"]:focus {
   border-radius: 2px;
 }
 
-/* line 266, ../scss/ulearn.scss */
+/* line 265, ../scss/ulearn.scss */
 .event a {
   color: #555;
   font-weight: normal;
 }
 
-/* line 267, ../scss/ulearn.scss */
+/* line 266, ../scss/ulearn.scss */
 .todayevent a {
   color: #fff;
 }
 
-/* line 269, ../scss/ulearn.scss */
+/* line 268, ../scss/ulearn.scss */
 #box_valorats ul, #box_comentaris ul {
   margin-top: 10px;
   margin-left: 25px;
 }
 
-/* line 271, ../scss/ulearn.scss */
+/* line 270, ../scss/ulearn.scss */
 #box_valorats li a:hover, #box_comentaris li a:hover {
   text-decoration: underline;
 }
 
-/* line 273, ../scss/ulearn.scss */
+/* line 272, ../scss/ulearn.scss */
 #box_valorats li, #box_comentaris li {
   border-bottom: 1px solid #EEEEEE;
   font-size: 13px;
@@ -2000,14 +1996,14 @@ input[type="text"]:focus {
   padding-bottom: 8px;
 }
 
-/* line 280, ../scss/ulearn.scss */
+/* line 279, ../scss/ulearn.scss */
 #box_valorats i, #box_comentaris i {
   color: #34495E;
   font-size: 15px;
   vertical-align: middle;
 }
 
-/* line 287, ../scss/ulearn.scss */
+/* line 286, ../scss/ulearn.scss */
 .btn-comunitat {
   color: #FFFFFF;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
@@ -2030,7 +2026,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 312, ../scss/ulearn.scss */
+/* line 311, ../scss/ulearn.scss */
 .btn-comunitat:hover,
 .btn-comunitat:active,
 .btn-comunitat.active,
@@ -2041,10 +2037,25 @@ input[type="text"]:focus {
   *background-color: #003bb3;
 }
 
+/* line 316, ../scss/ulearn.scss */
+#menusup .nav-tabs > .btn-plus > a {
+  background: none repeat scroll 0 0 #34495E;
+  color: white;
+  padding-left: 10px;
+  padding-right: 5px;
+  text-shadow: none;
+}
+
+/* line 323, ../scss/ulearn.scss */
+#menusup .nav-tabs > .btn-plus > a:hover {
+  background: none repeat scroll 0 0 #34495E;
+  opacity: 0.8;
+}
+
 /* ==========================================================================
    MAX
    ========================================================================== */
-/* line 322, ../scss/ulearn.scss */
+/* line 332, ../scss/ulearn.scss */
 #maxui-container {
   color: #444444;
   font: 13px/18px 'Open Sans', serif;
@@ -2052,25 +2063,31 @@ input[type="text"]:focus {
   border: 0 none;
 }
 
-/* line 328, ../scss/ulearn.scss */
+/* line 338, ../scss/ulearn.scss */
 #maxui-container a {
   color: #007BC0;
   font-family: 'Open Sans', serif;
 }
 
-/* line 332, ../scss/ulearn.scss */
+/* line 342, ../scss/ulearn.scss */
 #maxui-container a:hover {
   border-bottom: 0;
 }
 
-/* line 333, ../scss/ulearn.scss */
+/* line 343, ../scss/ulearn.scss */
 .maxui-displayname {
   color: #F58D3D;
   font-size: 14px;
   font-weight: bold;
 }
 
-/* line 338, ../scss/ulearn.scss */
+/* line 348, ../scss/ulearn.scss */
+#maxui-container a:hover {
+  color: #34495E;
+  text-decoration: none;
+}
+
+/* line 352, ../scss/ulearn.scss */
 #maxui-timeline {
   background: none repeat scroll 0 0 #FFFFFF;
   clear: both;
@@ -2079,14 +2096,14 @@ input[type="text"]:focus {
   padding: 10px;
 }
 
-/* line 345, ../scss/ulearn.scss */
+/* line 359, ../scss/ulearn.scss */
 #maxui-newactivity {
   background: none repeat scroll 0 0 #34495E;
   padding: 10px;
   position: relative;
 }
 
-/* line 350, ../scss/ulearn.scss */
+/* line 364, ../scss/ulearn.scss */
 #maxui-newactivity textarea, .maxui-comments textarea {
   border: 0 none;
   border-radius: 3px 3px 3px 3px;
@@ -2104,7 +2121,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 366, ../scss/ulearn.scss */
+/* line 380, ../scss/ulearn.scss */
 #maxui-search {
   background: none repeat scroll 0 0 #DEDED6;
   border-bottom: 0 none;
@@ -2112,7 +2129,7 @@ input[type="text"]:focus {
   padding: 10px 30px 10px 10px;
 }
 
-/* line 372, ../scss/ulearn.scss */
+/* line 386, ../scss/ulearn.scss */
 #maxui-search-text {
   -moz-appearance: none;
   border: 1px solid #B2B2B2;
@@ -2127,7 +2144,7 @@ input[type="text"]:focus {
   width: 100%;
 }
 
-/* line 385, ../scss/ulearn.scss */
+/* line 399, ../scss/ulearn.scss */
 .maxui-avatar:before, .maxui-avatar:before {
   border-radius: 0 0 0 0;
   bottom: 0;
@@ -2139,20 +2156,20 @@ input[type="text"]:focus {
   box-shadow: none;
 }
 
-/* line 395, ../scss/ulearn.scss */
+/* line 409, ../scss/ulearn.scss */
 #maxui-container a img {
   border: 0 none;
   border-radius: 0 0 0 0;
 }
 
-/* line 399, ../scss/ulearn.scss */
+/* line 413, ../scss/ulearn.scss */
 .maxui-topright {
   color: #222222;
   font-size: 11px;
   text-align: right;
 }
 
-/* line 404, ../scss/ulearn.scss */
+/* line 418, ../scss/ulearn.scss */
 .maxui-avatar {
   float: left;
   left: -60px;
@@ -2161,12 +2178,12 @@ input[type="text"]:focus {
   top: 0;
 }
 
-/* line 411, ../scss/ulearn.scss */
+/* line 425, ../scss/ulearn.scss */
 .activities .maxui-activity-content {
   margin: 0 0 0 60px;
 }
 
-/* line 414, ../scss/ulearn.scss */
+/* line 428, ../scss/ulearn.scss */
 #maxui-back-conversations, #maxui-show-conversations {
   background: none repeat scroll 0 0 #F5F5F5;
   border-bottom: 0 none;
@@ -2175,12 +2192,12 @@ input[type="text"]:focus {
   text-align: center;
 }
 
-/* line 421, ../scss/ulearn.scss */
+/* line 435, ../scss/ulearn.scss */
 .maxui-avatar img {
   box-shadow: none;
 }
 
-/* line 424, ../scss/ulearn.scss */
+/* line 438, ../scss/ulearn.scss */
 input.maxui-button {
   background: none repeat scroll 0 0 #F58D3D;
   border: 0 none;
@@ -2194,7 +2211,7 @@ input.maxui-button {
   text-shadow: 1px 1px rgba(0, 0, 0, 0.5);
 }
 
-/* line 436, ../scss/ulearn.scss */
+/* line 450, ../scss/ulearn.scss */
 input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, input.maxui-button:focus {
   background: none repeat scroll 0 0 #fb9a4f;
   border: 0 none;
@@ -2203,7 +2220,7 @@ input.maxui-button:hover, input.maxui-button:hover, input.maxui-button:focus, in
   cursor: pointer;
 }
 
-/* line 443, ../scss/ulearn.scss */
+/* line 457, ../scss/ulearn.scss */
 input.maxui-button[disabled] {
   background: none repeat scroll 0 0 #E5E5E5;
   border: 0;
@@ -2214,12 +2231,12 @@ input.maxui-button[disabled] {
   text-shadow: 0 1px #FFFFFF;
 }
 
-/* line 452, ../scss/ulearn.scss */
+/* line 466, ../scss/ulearn.scss */
 #maxui-container input:focus {
   box-shadow: none !important;
 }
 
-/* line 455, ../scss/ulearn.scss */
+/* line 469, ../scss/ulearn.scss */
 #maxui-container textarea:focus, #maxui-container input[type="search"]:focus {
   border: 1px solid #F58D3D !important;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05) inset, 0 0 8px rgba(100, 123, 192, 0.5) !important;
@@ -2228,19 +2245,19 @@ input.maxui-button[disabled] {
 /* ==========================================================================
    MODIFICACIONS GENWEB
    ========================================================================== */
-/* line 462, ../scss/ulearn.scss */
+/* line 476, ../scss/ulearn.scss */
 h1, h2, h3, label {
   color: #F58D3D;
 }
 
-/* line 465, ../scss/ulearn.scss */
+/* line 479, ../scss/ulearn.scss */
 .liniaDalt, .tileHeadline {
   border-top: 1px solid #DDDDDD;
   box-shadow: none;
   padding: 10px 0;
 }
 
-/* line 470, ../scss/ulearn.scss */
+/* line 484, ../scss/ulearn.scss */
 .liniaBaix, .documentFirstHeading {
   border-bottom: 1px solid #DDDDDD;
   box-shadow: none;
@@ -2248,17 +2265,22 @@ h1, h2, h3, label {
   padding: 0 0 5px;
 }
 
-/* line 476, ../scss/ulearn.scss */
-.tab-content, .documentEditable {
+/* line 490, ../scss/ulearn.scss */
+#documents-view, #links-view, #images-view, .documentEditable {
   padding: 10px;
 }
 
-/* line 479, ../scss/ulearn.scss */
+/* line 494, ../scss/ulearn.scss */
+.content_edit .rowlike {
+  padding: 10px;
+}
+
+/* line 495, ../scss/ulearn.scss */
 .nav-tabs, .contentViews, .configlets {
   box-shadow: none;
 }
 
-/* line 482, ../scss/ulearn.scss */
+/* line 498, ../scss/ulearn.scss */
 #portal-header .container {
   border-top: 0 none;
   margin-bottom: 15px;
@@ -2266,29 +2288,39 @@ h1, h2, h3, label {
   border-bottom: 0;
 }
 
-/* line 488, ../scss/ulearn.scss */
+/* line 504, ../scss/ulearn.scss */
 #content-area {
   margin-top: 1.7em;
 }
 
-/* line 491, ../scss/ulearn.scss */
+/* line 507, ../scss/ulearn.scss */
 [class*="span"], .cella {
   margin-bottom: 0;
 }
 
-/* line 494, ../scss/ulearn.scss */
+/* line 510, ../scss/ulearn.scss */
 #portal-breadcrumbs {
   margin-bottom: -15px;
   margin-top: -15px;
 }
 
-/* line 498, ../scss/ulearn.scss */
+/* line 514, ../scss/ulearn.scss */
 .template-homepage #portal-breadcrumbs {
   margin-bottom: 0;
   margin-top: 0;
 }
 
-/* line 502, ../scss/ulearn.scss */
+/* line 518, ../scss/ulearn.scss */
 #eines .input-append {
   border-left: 0;
+}
+
+/* line 521, ../scss/ulearn.scss */
+#edit-bar, .formTabs {
+  font-size: 12px;
+}
+
+/* line 524, ../scss/ulearn.scss */
+#edit-bar a, .formTabs a {
+  text-decoration: none;
 }
