--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -544,3 +544,70 @@ h1, h2, h3, label {
 font-size:12px;
 }
 #edit-bar a, .formTabs a {text-decoration:none;}
+
+#communitylist {
+    padding: 10px;
+    font-size: 13px;
+    color: #555;
+    text-shadow: 1px 1px 0px white;
+    background:#f9f9f9;
+
+    .eines {
+        color: #34495E;
+        float: right;
+        font-size: 18px;
+        margin: 0 10px 50px;
+        text-decoration: none;
+    }
+
+    ul {
+        margin-left: 0;
+        list-style: none;
+    }
+
+    li {
+        min-height: 45px;
+        line-height: 20px;
+        border-bottom: 1px solid #DDDDDD;
+        margin-bottom: 0;
+        padding-bottom: 15px;
+        padding-left: 10px;
+        padding-top: 10px;
+        background:#f9f9f9;
+        box-shadow:0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #DDDDDD;
+    }
+
+    a {
+        color: #555;
+        text-decoration:none;
+
+        h4 {
+            color: #F58D3D;
+            font-size: 16px;
+            margin-bottom: 0;
+            margin-top: 0;
+
+            &:hover {opacity:0.8;}
+        }
+    }
+
+    img {
+        margin-bottom: 35px;
+        margin-right: 15px;
+        margin-top: 3px;
+        border:2px solid white;
+        max-width: 54px;
+
+        &:hover {transition: all 0.25s ease 0s;border:2px solid #F58D3D;}
+    }
+
+    .item { margin-right: 50px}
+
+}
+
+// Afegida la icona a tot arreu.
+.icon-ulearn-community, .icon-ulearn.community { background-position: -312px -192px; }
+#listing-table a.contenttype-ulearn-community:before,
+.template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
+  background-position: -312px -192px;
+}
