--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2341,3 +2341,81 @@ h1, h2, h3, label {
 #edit-bar a, .formTabs a {
   text-decoration: none;
 }
+
+/* line 548, ../scss/ulearn.scss */
+#communitylist {
+  padding: 10px;
+  font-size: 13px;
+  color: #555;
+  text-shadow: 1px 1px 0px white;
+  background: #f9f9f9;
+}
+/* line 555, ../scss/ulearn.scss */
+#communitylist .eines {
+  color: #34495E;
+  float: right;
+  font-size: 18px;
+  margin: 0 10px 50px;
+  text-decoration: none;
+}
+/* line 563, ../scss/ulearn.scss */
+#communitylist ul {
+  margin-left: 0;
+  list-style: none;
+}
+/* line 568, ../scss/ulearn.scss */
+#communitylist li {
+  min-height: 45px;
+  line-height: 20px;
+  border-bottom: 1px solid #dddddd;
+  margin-bottom: 0;
+  padding-bottom: 15px;
+  padding-left: 10px;
+  padding-top: 10px;
+  background: #f9f9f9;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1) inset, 0 0 0 #dddddd;
+}
+/* line 580, ../scss/ulearn.scss */
+#communitylist a {
+  color: #555;
+  text-decoration: none;
+}
+/* line 584, ../scss/ulearn.scss */
+#communitylist a h4 {
+  color: #F58D3D;
+  font-size: 16px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
+/* line 590, ../scss/ulearn.scss */
+#communitylist a h4:hover {
+  opacity: 0.8;
+}
+/* line 594, ../scss/ulearn.scss */
+#communitylist img {
+  margin-bottom: 35px;
+  margin-right: 15px;
+  margin-top: 3px;
+  border: 2px solid white;
+  max-width: 54px;
+}
+/* line 601, ../scss/ulearn.scss */
+#communitylist img:hover {
+  transition: all 0.25s ease 0s;
+  border: 2px solid #f58d3d;
+}
+/* line 604, ../scss/ulearn.scss */
+#communitylist .item {
+  margin-right: 50px;
+}
+
+/* line 609, ../scss/ulearn.scss */
+.icon-ulearn-community, .icon-ulearn.community {
+  background-position: -312px -192px;
+}
+
+/* line 611, ../scss/ulearn.scss */
+#listing-table a.contenttype-ulearn-community:before,
+.template-folder_tabular_view .listing a.contenttype-ulearn-community:before {
+  background-position: -312px -192px;
+}
