First draft of the list tokenizer widget

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1,5 +1,6 @@
 $fontAwesomePath: "/++genweb++static/fonts";
 @import "compass_twitter_bootstrap/font-awesome";
+@import "token-input-facebook";
 // @import "genwebupc";
 
 // Victor for pushing it to genweb.theme
